tests/paczka1/fuzzy1/22260201.err
Error in line 4: LAP5 S250 40,9
Error in line 8: a7XYKE S250 81,4
Error in line 18: py7l6 S250 33,e
Error in line 20: aYSQe92lJ A443 -2,8
Error in line 7: vMP S250 9,4
Error in line 29: a7XYKE S805 21,2
Error in line 16: aYSQe92lJ A443 40,1
